--- a/.editorconfig
+++ b/.editorconfig
@@ -1,20 +1,12 @@
+# EditorConfig is awesome: https://EditorConfig.org
+
+# top-most EditorConfig file
 root = true
 
 [*]
-charset = utf-8
-indent_style = tab
-end_of_line = lf
+indent_style = space
 indent_size = 4
-insert_final_newline = true
-trim_trailing_whitespace = true
-
-[package.json]
-indent_style = space
-indent_size = 2
-
-[*.yml]
-indent_style = space
-indent_size = 2
-
-[*.ts]
-quote_type = single
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = false
+insert_final_newline = false
