--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://squidfunk.github.io/mkdocs-material/schema.json
 site_name: GoTrack Help Center
-site_url: https://support.gotrack365.com/help
+site_url: https://support.gotrack365.com
 site_author: GoTrack
 site_description: >-
   Official Documentation Center from GoTrack
@@ -63,10 +63,16 @@ plugins:
 # Page tree
 nav:
   - Home: index.md
-  - Getting started:
-    - Installation: getting-started.md
+  - Platform:
+    - Tổng quan: getting-started.md
+    - OpenAPI: openapi.md
+    - Demo: demo-content.md
+
   - Devices:
     - Overview: overview.md
+  - Tutorials:
+    - Overview: tutorial.md
+  - FAQ: faq.md
 
 # Additional configuration
 extra:
