--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://squidfunk.github.io/mkdocs-material/schema.json
-site_name: GoTrack Help Center
+site_name: GoTrack Support Center
 site_url: https://support.gotrack365.com
 site_author: GoTrack
 site_description: >-
